tests/NormalTests/paczka1/small_fuzzy/86786857.err
Error in line 1: hdr4hwBB S873 66,6
Error in line 7: HO6czICEf S922 76,0
